# coursework_5

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci_cd_pipeline.yml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_periodicity.py  0002_initial.py
nginx/: nginx.conf
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customsuser_tg_chat_id.py
